--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
     <p id="message" class="message" role="status"></p>
 
     <figure class="media">
-      <img id="main-image" class="image" src="your_image.jpg" alt="Cute image" />
+        <div class="image-wrap">
+            <img
+                id="main-image"
+                class="image"
+                src="your_image.jpg"
+                alt="Us at sunset"
+            />
+            <figcaption class="caption">
+                Every sunset is better with you 🌅
+            </figcaption>
+        </div>
     </figure>
 
     <p id="signature" class="signature">💗💗 Ella Bellargh 💗💗</p>
