--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 src="your_image.jpg"
                 alt="Us at sunset"
             />
-            <figcaption class="caption">
+            <figcaption class="caption caption-top">
                 Every sunset is better with you 🌅
             </figcaption>
         </div>
