--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
     <p id="message" class="message" role="status"></p>
 
     <figure class="media">
-        <div class="image-wrap">
+            <figcaption class="caption-outside">
+                Every sunset is better with you 🌅
+            </figcaption>      
             <img
                 id="main-image"
                 class="image"
                 src="your_image.jpg"
                 alt="Us at sunset"
             />
-            <figcaption class="caption caption-top">
-                Every sunset is better with you 🌅
-            </figcaption>
         </div>
     </figure>
 
